--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -10,8 +10,21 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+            android:padding="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+        <ImageView
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:id="@+id/imageView"
+                app:layout_constraintTop_toTopOf="parent"
+                android:src="@mipmap/ic_launcher"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="8dp"
+                app:profileImage="@{viewModel.getImgeUrl()}"
+                android:layout_marginBottom="8dp"/>
 
         <TextView
                 android:id="@+id/post_title"
@@ -20,8 +33,9 @@
                 android:textStyle="bold"
                 app:mutableText="@{viewModel.getPostTitle()}"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imageView"
+                android:layout_marginStart="8dp"/>
 
         <TextView
                 android:id="@+id/post_body"
@@ -30,8 +44,9 @@
                 android:layout_marginTop="8dp"
                 app:mutableText="@{viewModel.getPostBody()}"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/post_title"/>
+                app:layout_constraintTop_toBottomOf="@+id/post_title"
+                app:layout_constraintStart_toEndOf="@+id/imageView"
+                android:layout_marginStart="8dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
